Add categorized search and refactor code